--- a/search/index.html
+++ b/search/index.html
@@ -2191,7 +2191,7 @@ for( var option in optionArray)
     
     <!--Update the URL for thank you page on form submit -->
     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"      
-    onload="if(submitted) {window.location='../thanks.php';}"></iframe> 
+    onload="if(submitted) {window.location='../thanks.html';}"></iframe> 
     
     <!-- Update the Google forms URL in action-->
     <form onsubmit="return validateForm();" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScxJxL5VGVQpJqdoVFs13lJrd34w_3MvnYxFLIBeWIGd1-6Yg/formResponse" method="post" target="hidden_iframe">
