--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
           </ul>
           <div class="mt-3">
           
-            <a href="contact.php" class="btn-get-quote">Start Now</a>
-            <a href="get-started.php" class="btn-get-started scrollto">Get Started</a>
+            <a href="contact.html" class="btn-get-quote">Start Now</a>
+            <a href="get-started.html" class="btn-get-started scrollto">Get Started</a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
